--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
+spring.datasource.url = jdbc:mysql://localhost:3306/ecom?serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username =root
+spring.datasource.password =
+spring.jpa.generate-ddl=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.port=9011
